--- a/Giaovien/styleGV.css
+++ b/Giaovien/styleGV.css
@@ -313,7 +313,7 @@
 }
 /*----------------------btn ghi chú điểm danh---------------------*/
 #CuaSoGCDD{
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -464,7 +464,7 @@
 }
 /*----------------------btnThem ghi chú---------------------*/
 #CuaSoThemGhiChuSK, #CuaSoSUAGhiChuSK {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -619,7 +619,7 @@
 }
 /*----------------------btn nhập điểm---------------------*/
 #CuaSoNĐS,#CuaSoNĐSSUA {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -761,7 +761,7 @@
 }
 /*----------------------btn soạn tin---------------------*/
 #CuaSoSoanTinLL{
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
